--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -8,18 +8,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/router-plugin": "^1.140.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react-swc": "^4.2.2",
     "globals": "^16.5.0",
-    "typescript": "~5.9.3",
-    "vite": "npm:rolldown-vite@7.2.5"
-  },
-  "pnpm": {
-    "overrides": {
-      "vite": "npm:rolldown-vite@7.2.5"
-    }
+    "typescript": "~5.9.3"
   }
 }
