--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "pnpm -F @npc-cli/app build"
   },
   "devDependencies": {
+    "@biomejs/biome": "^2.3.8",
     "@types/node": "^24.10.1",
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
