feat: can generate packages/cli/main.wasm

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -2,7 +2,9 @@
   "name": "@npc-cli/cli",
   "private": true,
   "type": "module",
-  "scripts": {},
+  "scripts": {
+    "wasm": "tinygo build -o main.wasm -target ./target.json"
+  },
   "dependencies": {},
   "devDependencies": {}
 }
