--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@npc-cli/cli": "workspace:^",
     "@tanstack/react-router": "catalog:",
     "@tanstack/router-plugin": "catalog:",
     "react": "catalog:",
