--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,4 @@
 {
   "files": [],
-  "references": [
-    { "path": "./packages/app" },
-  ]
+  "references": [{ "path": "./packages/app" }, { "path": "./packages/cli" }]
 }
