feat: extend File struct with literal Type "File" (type discriminator)

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -6,8 +6,9 @@
     "./src/test-load-wasm": "./src/test-load-wasm.ts"
   },
   "scripts": {
+    "build:wasm": "pnpm gen:structs && pnpm gen:wasm",
     "gen:structs": "cd processor && easyjson -all structs.go",
-    "wasm": "tinygo build -o main.wasm -target ./target.json"
+    "gen:wasm": "tinygo build -o main.wasm -target ./target.json"
   },
   "dependencies": {
     "@npc-cli/util": "workspace:^",
