--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -16,6 +16,9 @@
     "react-grid-layout": "^2.0.0"
   },
   "devDependencies": {
+    "@mdx-js/react": "^3.1.1",
+    "@mdx-js/rollup": "^3.1.1",
+    "@tailwindcss/typography": "^0.5.19",
     "@tailwindcss/vite": "catalog:",
     "@tanstack/react-router-devtools": "catalog:",
     "@vitejs/plugin-react-swc": "catalog:",
