fix: root tsconfig should refer to all subpackages

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
   "references": [
     { "path": "./packages/app" },
     { "path": "./packages/cli" },
+    { "path": "./packages/media" },
     { "path": "./packages/util" }
   ]
 }
