feat: add zustand to app

--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -13,7 +13,8 @@
     "@tanstack/router-plugin": "catalog:",
     "react": "catalog:",
     "react-dom": "catalog:",
-    "react-grid-layout": "^2.0.0"
+    "react-grid-layout": "^2.0.0",
+    "zustand": "^5.0.9"
   },
   "devDependencies": {
     "@mdx-js/react": "^3.1.1",
