--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@npc-cli/parse-sh": "workspace:^",
+    "@npc-cli/util": "workspace:^",
     "@tanstack/react-router": "catalog:",
     "@tanstack/router-plugin": "catalog:",
     "react": "catalog:",
