--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -14,7 +14,7 @@
     "@tanstack/router-plugin": "catalog:",
     "react": "catalog:",
     "react-dom": "catalog:",
-    "react-grid-layout": "^2.0.0",
+    "react-grid-layout": "catalog:",
     "zustand": "^5.0.9"
   },
   "devDependencies": {
