feat: towards cli/parse

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -2,7 +2,9 @@
   "name": "@npc-cli/cli",
   "private": true,
   "type": "module",
-  "exports": {},
+  "exports": {
+    ".": "./src/index.ts"
+  },
   "scripts": {},
   "dependencies": {
     "@npc-cli/parse-sh": "workspace:^"
