--- a/packages/util/package.json
+++ b/packages/util/package.json
@@ -8,6 +8,7 @@
   "scripts": {},
   "dependencies": {
     "clsx": "^2.1.1",
+    "react": "catalog:",
     "tailwind-merge": "^3.4.0",
     "zod": "^4.1.13"
   }
