--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -2,16 +2,17 @@ packages:
   - packages/**
 
 catalog:
-  '@biomejs/biome': ^2.3.8
-  '@tailwindcss/vite': ^4.1.17
-  '@tanstack/react-router': ^1.140.1
-  '@tanstack/react-router-devtools': ^1.140.1
-  '@tanstack/router-plugin': ^1.140.1
-  '@types/node': ^24.10.1
-  '@types/react': ^19.2.5
-  '@types/react-dom': ^19.2.3
-  '@vitejs/plugin-react-swc': ^4.2.2
+  "@biomejs/biome": ^2.3.8
+  "@tailwindcss/vite": ^4.1.17
+  "@tanstack/react-router": ^1.140.1
+  "@tanstack/react-router-devtools": ^1.140.1
+  "@tanstack/router-plugin": ^1.140.1
+  "@types/node": ^24.10.1
+  "@types/react": ^19.2.5
+  "@types/react-dom": ^19.2.3
+  "@vitejs/plugin-react-swc": ^4.2.2
   globals: ^16.5.0
+  javascript-stringify: 2.1.0
   react: 19.2.1
   react-dom: ^19.2.0
   react-grid-layout: 2.1.0
