feat: add interactiveParse and tryParseBuffer

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -8,6 +8,7 @@
   "scripts": {},
   "dependencies": {
     "@npc-cli/parse-sh": "workspace:^",
+    "@npc-cli/util": "workspace:^",
     "lodash.clonedeep": "^4.5.0"
   },
   "devDependencies": {
