--- a/packages/util/package.json
+++ b/packages/util/package.json
@@ -3,13 +3,16 @@
   "private": true,
   "type": "module",
   "exports": {
-    ".": "./src/main.ts"
+    ".": "./src/main.ts",
+    "./legacy/generic": "./src/legacy/generic.js"
   },
   "scripts": {},
   "dependencies": {
-    "clsx": "^2.1.1",
+    "clsx": "catalog:",
+    "javascript-stringify": "catalog:",
+    "json-stringify-pretty-compact": "catalog:",
     "react": "catalog:",
-    "tailwind-merge": "^3.4.0",
-    "zod": "^4.1.13"
+    "tailwind-merge": "catalog:",
+    "zod": "catalog:"
   }
 }
