--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -9,11 +9,14 @@
   "dependencies": {
     "@npc-cli/parse-sh": "workspace:^",
     "@npc-cli/util": "workspace:^",
+    "braces": "catalog:",
+    "getopts": "catalog:",
     "lodash.clonedeep": "catalog:",
     "rxjs": "catalog:",
     "zustand": "^5.0.9"
   },
   "devDependencies": {
+    "@types/braces": "catalog:",
     "@types/lodash.clonedeep": "^4.5.9"
   }
 }
