--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -7,12 +7,15 @@ catalog:
   "@tanstack/react-router": ^1.140.1
   "@tanstack/react-router-devtools": ^1.140.1
   "@tanstack/router-plugin": ^1.140.1
+  "@types/braces": ^3.0.5
   "@types/node": ^24.10.1
   "@types/react": ^19.2.5
   "@types/react-dom": ^19.2.3
   "@vitejs/plugin-react-swc": ^4.2.2
+  braces: ^3.0.3
   clsx: ^2.1.1
   rxjs: ^7.8.2
+  getopts: ^2.3.0
   globals: ^16.5.0
   javascript-stringify: 2.1.0
   json-stringify-pretty-compact: ^4.0.0
