feat: add @tanstack/react-query

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@npc-cli/parse-sh": "workspace:^",
     "@npc-cli/util": "workspace:^",
+    "@tanstack/react-query": "catalog:",
     "braces": "catalog:",
     "cli-columns": "catalog:",
     "getopts": "catalog:",
