--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -4,6 +4,7 @@ packages:
 catalog:
   "@biomejs/biome": ^2.3.8
   "@tailwindcss/vite": ^4.1.17
+  "@tanstack/react-query": "^5.90.12"
   "@tanstack/react-router": ^1.140.1
   "@tanstack/react-router-devtools": ^1.140.1
   "@tanstack/router-plugin": ^1.140.1
