--- a/packages/util/package.json
+++ b/packages/util/package.json
@@ -8,6 +8,7 @@
   },
   "scripts": {},
   "dependencies": {
+    "@tanstack/react-query": "catalog:",
     "clsx": "catalog:",
     "debounce": "^3.0.0",
     "javascript-stringify": "catalog:",
