--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -2,21 +2,20 @@ packages:
   - packages/**
 
 catalog:
-  "@biomejs/biome": ^2.3.8
-  "@tailwindcss/vite": ^4.1.17
-  "@tanstack/react-query": "^5.90.12"
-  "@tanstack/react-router": ^1.140.1
-  "@tanstack/react-router-devtools": ^1.140.1
-  "@tanstack/router-plugin": ^1.140.1
-  "@types/braces": ^3.0.5
-  "@types/node": ^24.10.1
-  "@types/react": ^19.2.5
-  "@types/react-dom": ^19.2.3
-  "@vitejs/plugin-react-swc": ^4.2.2
+  '@biomejs/biome': ^2.3.8
+  '@tailwindcss/vite': ^4.1.17
+  '@tanstack/react-query': 5.90.12
+  '@tanstack/react-router': ^1.140.1
+  '@tanstack/react-router-devtools': ^1.140.1
+  '@tanstack/router-plugin': ^1.140.1
+  '@types/braces': ^3.0.5
+  '@types/node': ^24.10.1
+  '@types/react': ^19.2.5
+  '@types/react-dom': ^19.2.3
+  '@vitejs/plugin-react-swc': ^4.2.2
   braces: ^3.0.3
   cli-columns: ^4.0.0
   clsx: ^2.1.1
-  rxjs: ^7.8.2
   getopts: ^2.3.0
   globals: ^16.5.0
   javascript-stringify: 2.1.0
@@ -25,6 +24,7 @@ catalog:
   react: 19.2.1
   react-dom: ^19.2.0
   react-grid-layout: 2.1.0
+  rxjs: ^7.8.2
   tailwind-merge: ^3.4.0
   tailwindcss: ^4.1.17
   typescript: ~5.9.3
