--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -18,6 +18,7 @@
     "getopts": "catalog:",
     "lodash.clonedeep": "catalog:",
     "react-beforeunload": "^2.7.0",
+    "react-use-measure": "^2.1.7",
     "rxjs": "catalog:",
     "sugar-high": "^0.9.5",
     "zustand": "^5.0.9"
