feat: export npc.d.ts from packages/cli

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -4,7 +4,10 @@
   "type": "module",
   "exports": {
     ".": "./src/main.ts",
-    "./jsh/modules": "./src/jsh/modules.js"
+    "./jsh/modules": "./src/jsh/modules.js",
+    "./legacy/npc.d.ts": {
+      "types": "./src/legacy/npc.d.ts"
+    }
   },
   "scripts": {},
   "dependencies": {
