--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -18,6 +18,7 @@
     "javascript-stringify": "catalog:",
     "motion": "^12.23.26",
     "react": "catalog:",
+    "react-beforeunload": "catalog:",
     "react-dom": "catalog:",
     "react-grid-layout": "catalog:",
     "zustand": "^5.0.9"
@@ -28,6 +29,7 @@
     "@tailwindcss/typography": "^0.5.19",
     "@tailwindcss/vite": "catalog:",
     "@tanstack/react-router-devtools": "catalog:",
+    "@types/react-beforeunload": "catalog:",
     "@vitejs/plugin-react-swc": "catalog:",
     "globals": "catalog:",
     "tailwindcss": "catalog:"
