--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -2,17 +2,18 @@ packages:
   - packages/**
 
 catalog:
-  '@biomejs/biome': ^2.3.8
-  '@tailwindcss/vite': ^4.1.17
-  '@tanstack/react-query': 5.90.12
-  '@tanstack/react-router': ^1.140.1
-  '@tanstack/react-router-devtools': ^1.140.1
-  '@tanstack/router-plugin': ^1.140.1
-  '@types/braces': ^3.0.5
-  '@types/node': ^24.10.1
-  '@types/react': ^19.2.5
-  '@types/react-dom': ^19.2.3
-  '@vitejs/plugin-react-swc': ^4.2.2
+  "@biomejs/biome": ^2.3.8
+  "@tailwindcss/vite": ^4.1.17
+  "@tanstack/react-query": 5.90.12
+  "@tanstack/react-router": ^1.140.1
+  "@tanstack/react-router-devtools": ^1.140.1
+  "@tanstack/router-plugin": ^1.140.1
+  "@types/braces": ^3.0.5
+  "@types/node": ^24.10.1
+  "@types/react": ^19.2.5
+  "@types/react-beforeunload": "^2.1.5"
+  "@types/react-dom": ^19.2.3
+  "@vitejs/plugin-react-swc": ^4.2.2
   braces: ^3.0.3
   cli-columns: ^4.0.0
   clsx: ^2.1.1
@@ -22,6 +23,7 @@ catalog:
   json-stringify-pretty-compact: ^4.0.0
   lodash.clonedeep: ^4.5.0
   react: 19.2.1
+  react-beforeunload: ^2.7.0
   react-dom: ^19.2.0
   react-grid-layout: 2.1.0
   rxjs: ^7.8.2
