feat: add top-level scripts package

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "files": [],
   "references": [
+    { "path": "./scripts" },
     { "path": "./packages/app" },
     { "path": "./packages/cli" },
     { "path": "./packages/media" },
