--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,8 +1,12 @@
 packages:
+  - scripts
   - packages/**
+
+catalogMode: strict
 
 catalog:
   "@biomejs/biome": ^2.3.8
+  "@inquirer/prompts": ^8.1.0
   "@tailwindcss/vite": ^4.1.17
   "@tanstack/react-query": 5.90.12
   "@tanstack/react-router": ^1.140.1
@@ -11,7 +15,7 @@ catalog:
   "@types/braces": ^3.0.5
   "@types/node": ^24.10.1
   "@types/react": ^19.2.5
-  "@types/react-beforeunload": "^2.1.5"
+  "@types/react-beforeunload": ^2.1.5
   "@types/react-dom": ^19.2.3
   "@vitejs/plugin-react-swc": ^4.2.2
   braces: ^3.0.3
