feat: packages/ui/demo -> packages/ui/template

--- a/packages/ui/registry/package.json
+++ b/packages/ui/registry/package.json
@@ -7,6 +7,6 @@
   },
   "scripts": {},
   "dependencies": {
-    "@npc-cli/ui__demo": "workspace:^"
+    "@npc-cli/ui__template": "workspace:^"
   }
 }
