--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
     { "path": "./packages/cli" },
     { "path": "./packages/media" },
     { "path": "./packages/util" },
-    { "path": "./packages/ui/demo" },
+    { "path": "./packages/ui/template" },
     { "path": "./packages/ui/registry" }
   ]
 }
