--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -2,22 +2,20 @@ packages:
   - scripts
   - packages/**
 
-catalogMode: strict
-
 catalog:
-  "@biomejs/biome": ^2.3.8
-  "@inquirer/prompts": ^8.1.0
-  "@tailwindcss/vite": ^4.1.17
-  "@tanstack/react-query": 5.90.12
-  "@tanstack/react-router": ^1.140.1
-  "@tanstack/react-router-devtools": ^1.140.1
-  "@tanstack/router-plugin": ^1.140.1
-  "@types/braces": ^3.0.5
-  "@types/node": ^24.10.1
-  "@types/react": ^19.2.5
-  "@types/react-beforeunload": ^2.1.5
-  "@types/react-dom": ^19.2.3
-  "@vitejs/plugin-react-swc": ^4.2.2
+  '@biomejs/biome': ^2.3.8
+  '@inquirer/prompts': ^8.1.0
+  '@tailwindcss/vite': ^4.1.17
+  '@tanstack/react-query': 5.90.12
+  '@tanstack/react-router': ^1.140.1
+  '@tanstack/react-router-devtools': ^1.140.1
+  '@tanstack/router-plugin': ^1.140.1
+  '@types/braces': ^3.0.5
+  '@types/node': ^24.10.1
+  '@types/react': ^19.2.5
+  '@types/react-beforeunload': ^2.1.5
+  '@types/react-dom': ^19.2.3
+  '@vitejs/plugin-react-swc': ^4.2.2
   braces: ^3.0.3
   cli-columns: ^4.0.0
   clsx: ^2.1.1
@@ -33,8 +31,11 @@ catalog:
   rxjs: ^7.8.2
   tailwind-merge: ^3.4.0
   tailwindcss: ^4.1.17
+  type-fest: ^5.3.1
   typescript: ~5.9.3
-  zod: ^4.1.13
+  zod: 4.1.13
+
+catalogMode: strict
 
 publicHoistPattern:
   - react-resizable
