feat: can `pnpm exec scaffold-ui`

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "devDependencies": {
     "@biomejs/biome": "catalog:",
+    "@npc-cli/scripts": "workspace:*",
     "@types/node": "catalog:",
     "@types/react": "catalog:",
     "@types/react-dom": "catalog:",
