--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "pnpm -F @npc-cli/app dev",
     "build": "pnpm -F @npc-cli/app build",
     "build:wasm": "pnpm -F @npc-cli/parse-sh build:wasm",
+    "gen:ui": "pnpm exec scaffold-ui",
     "preview": "pnpm -F @npc-cli/app preview",
     "types": "tsc -b"
   },
@@ -17,7 +18,7 @@
     "@types/react": "catalog:",
     "@types/react-dom": "catalog:",
     "typescript": "catalog:",
-    "vite": "npm:rolldown-vite@latest"
+    "vite": "npm:rolldown-vite@^7.3.0"
   },
   "engines": {
     "node": ">=24.0.0"
