--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -12,6 +12,7 @@
     "@npc-cli/parse-sh": "workspace:^",
     "@npc-cli/ui__registry": "workspace:^",
     "@npc-cli/util": "workspace:^",
+    "@phosphor-icons/react": "catalog:",
     "@tanstack/react-query": "catalog:",
     "@tanstack/react-router": "catalog:",
     "@tanstack/router-plugin": "catalog:",
