--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -5,6 +5,7 @@ packages:
 catalog:
   '@biomejs/biome': ^2.3.11
   '@inquirer/prompts': ^8.1.0
+  '@phosphor-icons/react': ^2.1.10
   '@tailwindcss/vite': ^4.1.17
   '@tanstack/react-query': 5.90.12
   '@tanstack/react-router': ^1.140.1
