--- a/packages/ui/blog/package.json
+++ b/packages/ui/blog/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@npc-cli/ui__registry",
+  "name": "@npc-cli/ui__blog",
   "private": true,
   "type": "module",
   "exports": {
@@ -7,7 +7,8 @@
   },
   "scripts": {},
   "dependencies": {
-    "@npc-cli/ui__blog": "workspace:^",
-    "@npc-cli/ui__template": "workspace:^"
+    "@npc-cli/util": "workspace:^",
+    "react": "catalog:",
+    "react-dom": "catalog:"
   }
 }
