--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -3,20 +3,20 @@ packages:
   - packages/**
 
 catalog:
-  '@biomejs/biome': ^2.3.11
-  '@inquirer/prompts': ^8.1.0
-  '@phosphor-icons/react': ^2.1.10
-  '@tailwindcss/vite': ^4.1.17
-  '@tanstack/react-query': 5.90.12
-  '@tanstack/react-router': ^1.140.1
-  '@tanstack/react-router-devtools': ^1.140.1
-  '@tanstack/router-plugin': ^1.140.1
-  '@types/braces': ^3.0.5
-  '@types/node': ^24.10.4
-  '@types/react': ^19.2.7
-  '@types/react-beforeunload': ^2.1.5
-  '@types/react-dom': ^19.2.3
-  '@vitejs/plugin-react-swc': ^4.2.2
+  "@biomejs/biome": ^2.3.11
+  "@inquirer/prompts": ^8.1.0
+  "@phosphor-icons/react": ^2.1.10
+  "@tailwindcss/vite": ^4.1.17
+  "@tanstack/react-query": 5.90.12
+  "@tanstack/react-router": ^1.140.1
+  "@tanstack/react-router-devtools": ^1.140.1
+  "@tanstack/router-plugin": ^1.140.1
+  "@types/braces": ^3.0.5
+  "@types/node": ^24.10.4
+  "@types/react": ^19.2.7
+  "@types/react-beforeunload": ^2.1.5
+  "@types/react-dom": ^19.2.3
+  "@vitejs/plugin-react-swc": ^4.2.2
   braces: ^3.0.3
   cli-columns: ^4.0.0
   clsx: ^2.1.1
@@ -35,6 +35,7 @@ catalog:
   type-fest: ^5.3.1
   typescript: ~5.9.3
   zod: 4.1.13
+  zustand: ^5.0.9
 
 catalogMode: strict
 
