feat: use layoutStore to persist uiLayout and itemToRect for ssg

--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -23,7 +23,8 @@
     "react": "catalog:",
     "react-beforeunload": "catalog:",
     "react-dom": "catalog:",
-    "react-grid-layout": "catalog:"
+    "react-grid-layout": "catalog:",
+    "zustand": "catalog:"
   },
   "devDependencies": {
     "@mdx-js/react": "^3.1.1",
