fix: multiple ttys via sessionId itemKey

--- a/packages/ui/jsh/package.json
+++ b/packages/ui/jsh/package.json
@@ -8,6 +8,7 @@
   "scripts": {},
   "dependencies": {
     "@npc-cli/cli": "workspace:^",
+    "@npc-cli/ui-sdk": "workspace:^",
     "react": "catalog:",
     "react-dom": "catalog:"
   }
