--- a/packages/ui/registry/package.json
+++ b/packages/ui/registry/package.json
@@ -7,6 +7,7 @@
   },
   "scripts": {},
   "dependencies": {
+    "@npc-cli/ui-sdk": "workspace:^",
     "@npc-cli/ui__blog": "workspace:^",
     "@npc-cli/ui__global": "workspace:^",
     "@npc-cli/ui__jsh": "workspace:^",
