--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -3,25 +3,27 @@ packages:
   - packages/**
 
 catalog:
-  "@biomejs/biome": ^2.3.11
-  "@inquirer/prompts": ^8.1.0
-  "@phosphor-icons/react": ^2.1.10
-  "@tailwindcss/vite": ^4.1.17
-  "@tanstack/react-query": 5.90.12
-  "@tanstack/react-router": ^1.140.1
-  "@tanstack/react-router-devtools": ^1.140.1
-  "@tanstack/router-plugin": ^1.140.1
-  "@types/braces": ^3.0.5
-  "@types/node": ^24.10.4
-  "@types/react": ^19.2.7
-  "@types/react-beforeunload": ^2.1.5
-  "@types/react-dom": ^19.2.3
-  "@vitejs/plugin-react-swc": ^4.2.2
+  '@biomejs/biome': ^2.3.11
+  '@inquirer/prompts': ^8.1.0
+  '@phosphor-icons/react': ^2.1.10
+  '@redux-devtools/extension': ^3.3.0
+  '@tailwindcss/vite': ^4.1.17
+  '@tanstack/react-query': 5.90.12
+  '@tanstack/react-router': ^1.140.1
+  '@tanstack/react-router-devtools': ^1.140.1
+  '@tanstack/router-plugin': ^1.140.1
+  '@types/braces': ^3.0.5
+  '@types/node': ^24.10.4
+  '@types/react': ^19.2.7
+  '@types/react-beforeunload': ^2.1.5
+  '@types/react-dom': ^19.2.3
+  '@vitejs/plugin-react-swc': ^4.2.2
   braces: ^3.0.3
   cli-columns: ^4.0.0
   clsx: ^2.1.1
   getopts: ^2.3.0
   globals: ^16.5.0
+  immer: ^11.1.3
   javascript-stringify: 2.1.0
   json-stringify-pretty-compact: ^4.0.0
   lodash.clonedeep: ^4.5.0
