feat: ui/jsh uses uiBootstrapRegistry

--- a/packages/ui/jsh/package.json
+++ b/packages/ui/jsh/package.json
@@ -3,7 +3,8 @@
   "private": true,
   "type": "module",
   "exports": {
-    ".": "./src/main.ts"
+    ".": "./src/main.ts",
+    "./bootstrap": "./src/bootstrap.tsx"
   },
   "scripts": {},
   "dependencies": {
