--- a/biome.json
+++ b/biome.json
@@ -3,6 +3,10 @@
   "linter": {
     "enabled": true,
     "rules": {
+      "a11y": {
+        "noStaticElementInteractions": "off",
+        "useKeyWithClickEvents": "off"
+      },
       "suspicious": {
         "noAssignInExpressions": "off",
         "noConfusingVoidType": "off",
