--- a/packages/ui/jsh/package.json
+++ b/packages/ui/jsh/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@npc-cli/cli": "workspace:^",
     "@npc-cli/ui-sdk": "workspace:^",
+    "@npc-cli/util": "workspace:^",
     "react": "catalog:",
     "react-dom": "catalog:"
   }
