--- a/packages/ui/template/package.json
+++ b/packages/ui/template/package.json
@@ -7,6 +7,7 @@
   },
   "scripts": {},
   "dependencies": {
+    "@npc-cli/ui-sdk": "workspace:^",
     "react": "catalog:",
     "react-dom": "catalog:"
   }
