--- a/packages/ui/jsh/package.json
+++ b/packages/ui/jsh/package.json
@@ -12,6 +12,7 @@
     "@npc-cli/ui-sdk": "workspace:^",
     "@npc-cli/util": "workspace:^",
     "react": "catalog:",
-    "react-dom": "catalog:"
+    "react-dom": "catalog:",
+    "zod": "catalog:"
   }
 }
