feat: support `pnpm dev-hotspot` with ssl for crypto

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "pnpm -F @npc-cli/app dev",
+    "dev-hotspot": "export USE_HTTPS=true && pnpm dev --host",
     "build": "pnpm -F @npc-cli/app build",
     "build:wasm": "pnpm -F @npc-cli/parse-sh build:wasm",
     "gen:ui": "pnpm exec scaffold-ui",
