--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -18,6 +18,7 @@ catalog:
   '@types/react': ^19.2.7
   '@types/react-beforeunload': ^2.1.5
   '@types/react-dom': ^19.2.3
+  '@vitejs/plugin-basic-ssl': ^2.1.4
   '@vitejs/plugin-react-swc': ^4.2.2
   braces: ^3.0.3
   cli-columns: ^4.0.0
@@ -33,10 +34,12 @@ catalog:
   react-dom: ^19.2.0
   react-grid-layout: 2.2.2
   rxjs: ^7.8.2
+  short-uuid: ^6.0.3
   tailwind-merge: ^3.4.0
   tailwindcss: ^4.1.17
   type-fest: ^5.3.1
   typescript: ~5.9.3
+  uuid: ^13.0.0
   zod: 4.1.13
   zustand: ^5.0.9
 
