feat: start using src/index for exports

--- a/packages/parse-sh/package.json
+++ b/packages/parse-sh/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "type": "module",
   "exports": {
-    ".": "./src/main.ts"
+    ".": "./src/index.ts"
   },
   "scripts": {
     "build:wasm": "pnpm gen:structs && pnpm gen:wasm",
