--- a/packages/ui/registry/package.json
+++ b/packages/ui/registry/package.json
@@ -3,9 +3,9 @@
   "private": true,
   "type": "module",
   "exports": {
-    ".": "./src/main.ts",
+    ".": "./src/index.ts",
     "./types": {
-      "types": "./src/main.ts"
+      "types": "./src/index.ts"
     }
   },
   "scripts": {},
