--- a/packages/util/package.json
+++ b/packages/util/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "type": "module",
   "exports": {
-    ".": "./src/main.ts",
+    ".": "./src/index.ts",
     "./legacy/generic": "./src/legacy/generic.js",
     "./legacy/dom": "./src/legacy/dom.js"
   },
