--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "type": "module",
   "exports": {
-    ".": "./src/main.ts",
+    ".": "./src/index.ts",
     "./jsh/modules": "./src/jsh/modules.js",
     "./legacy/npc.d.ts": {
       "types": "./src/legacy/npc.d.ts"
