--- a/packages/media/package.json
+++ b/packages/media/package.json
@@ -2,6 +2,9 @@
   "name": "@npc-cli/media",
   "private": true,
   "type": "module",
+  "exports": {
+    ".": "./src/index.ts"
+  },
   "scripts": {},
   "dependencies": {},
   "devDependencies": {}
