--- a/packages/ui/global/package.json
+++ b/packages/ui/global/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "type": "module",
   "exports": {
-    ".": "./src/main.ts"
+    ".": "./src/index.ts"
   },
   "scripts": {},
   "dependencies": {
