--- a/packages/ui/jsh/package.json
+++ b/packages/ui/jsh/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "type": "module",
   "exports": {
-    ".": "./src/main.ts",
+    ".": "./src/index.ts",
     "./bootstrap": "./src/bootstrap.tsx"
   },
   "scripts": {},
