feat: BasicPopover for close ui and Global reset

--- a/packages/ui/global/package.json
+++ b/packages/ui/global/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@npc-cli/theme": "workspace:^",
     "@npc-cli/ui-sdk": "workspace:^",
+    "@npc-cli/util": "workspace:^",
     "react": "catalog:",
     "react-dom": "catalog:"
   }
