feat: world component has schema

--- a/packages/ui/world/package.json
+++ b/packages/ui/world/package.json
@@ -10,6 +10,7 @@
     "@npc-cli/ui-sdk": "workspace:^",
     "@npc-cli/util": "workspace:^",
     "react": "catalog:",
-    "react-dom": "catalog:"
+    "react-dom": "catalog:",
+    "zod": "catalog:"
   }
 }
