--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -7,6 +7,8 @@ catalog:
   '@biomejs/biome': ^2.3.11
   '@inquirer/prompts': ^8.1.0
   '@phosphor-icons/react': ^2.1.10
+  '@react-three/drei': ^10.7.7
+  '@react-three/fiber': ^9.5.0
   '@redux-devtools/extension': ^3.3.0
   '@tailwindcss/vite': ^4.1.17
   '@tanstack/react-query': 5.90.12
@@ -18,6 +20,7 @@ catalog:
   '@types/react': ^19.2.7
   '@types/react-beforeunload': ^2.1.5
   '@types/react-dom': ^19.2.3
+  '@types/three': ^0.182.0
   '@vitejs/plugin-basic-ssl': ^2.1.4
   '@vitejs/plugin-react-swc': ^4.2.2
   braces: ^3.0.3
@@ -29,6 +32,7 @@ catalog:
   javascript-stringify: 2.1.0
   json-stringify-pretty-compact: ^4.0.0
   lodash.clonedeep: ^4.5.0
+  maath: ^0.10.8
   react: 19.2.1
   react-beforeunload: ^2.7.0
   react-dom: ^19.2.0
@@ -37,6 +41,7 @@ catalog:
   short-uuid: ^6.0.3
   tailwind-merge: ^3.4.0
   tailwindcss: ^4.1.17
+  three: ^0.182.0
   type-fest: ^5.3.1
   typescript: ~5.9.3
   uuid: ^13.0.0
