--- a/packages/ui/registry/package.json
+++ b/packages/ui/registry/package.json
@@ -17,6 +17,7 @@
     "@npc-cli/ui__template": "workspace:^",
     "@npc-cli/ui__world": "workspace:^",
     "@npc-cli/util": "workspace:^",
-    "react": "catalog:"
+    "react": "catalog:",
+    "react-reverse-portal": "catalog:"
   }
 }
