--- a/packages/ui/registry/package.json
+++ b/packages/ui/registry/package.json
@@ -14,6 +14,7 @@
     "@npc-cli/ui__blog": "workspace:^",
     "@npc-cli/ui__global": "workspace:^",
     "@npc-cli/ui__jsh": "workspace:^",
+    "@npc-cli/ui__tabs": "workspace:^",
     "@npc-cli/ui__template": "workspace:^",
     "@npc-cli/ui__world": "workspace:^",
     "@npc-cli/util": "workspace:^",
