feat: towards add ui to tabs

--- a/packages/ui/tabs/package.json
+++ b/packages/ui/tabs/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@npc-cli/ui-sdk": "workspace:^",
     "@npc-cli/util": "workspace:^",
+    "@phosphor-icons/react": "catalog:",
     "react": "catalog:",
     "react-dom": "catalog:",
     "zod": "catalog:"
