--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -3,7 +3,7 @@ packages:
   - packages/**
 
 catalog:
-  '@base-ui/react': ^1.1.0
+  '@base-ui/react': 1.1.0
   '@biomejs/biome': ^2.3.11
   '@inquirer/prompts': ^8.1.0
   '@phosphor-icons/react': ^2.1.10
@@ -28,7 +28,7 @@ catalog:
   clsx: ^2.1.1
   getopts: ^2.3.0
   globals: ^16.5.0
-  immer: ^11.1.3
+  immer: 11.1.3
   javascript-stringify: 2.1.0
   json-stringify-pretty-compact: ^4.0.0
   lodash.clonedeep: ^4.5.0
