--- a/packages/ui-sdk/package.json
+++ b/packages/ui-sdk/package.json
@@ -15,6 +15,6 @@
     "zustand": "catalog:"
   },
   "devDependencies": {
-    "@npc-cli/ui__registry": "workspace:^"
+    "@npc-cli/ui-registry": "workspace:^"
   }
 }
