feat: tweak contextmenu bootstrap uis

--- a/packages/ui/jsh/package.json
+++ b/packages/ui/jsh/package.json
@@ -11,6 +11,7 @@
     "@npc-cli/cli": "workspace:^",
     "@npc-cli/ui-sdk": "workspace:^",
     "@npc-cli/util": "workspace:^",
+    "@phosphor-icons/react": "catalog:",
     "react": "catalog:",
     "react-dom": "catalog:",
     "zod": "catalog:"
