--- a/packages/ui/world/package.json
+++ b/packages/ui/world/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@npc-cli/ui-sdk": "workspace:^",
     "@npc-cli/util": "workspace:^",
+    "@phosphor-icons/react": "catalog:",
     "@react-three/drei": "catalog:",
     "@react-three/fiber": "catalog:",
     "@types/three": "catalog:",
