feat: ui-sdk has react-reverse-portal

--- a/packages/ui-sdk/package.json
+++ b/packages/ui-sdk/package.json
@@ -11,6 +11,7 @@
     "@npc-cli/util": "workspace:^",
     "immer": "catalog:",
     "react": "catalog:",
+    "react-reverse-portal": "catalog:",
     "zod": "catalog:",
     "zustand": "catalog:"
   },
