feat: merge layout.store into ui.store

--- a/packages/ui-sdk/package.json
+++ b/packages/ui-sdk/package.json
@@ -15,5 +15,8 @@
     "react-reverse-portal": "catalog:",
     "zod": "catalog:",
     "zustand": "catalog:"
+  },
+  "devDependencies": {
+    "react-grid-layout": "catalog:"
   }
 }
