--- a/packages/ui/world/package.json
+++ b/packages/ui/world/package.json
@@ -7,6 +7,7 @@
   },
   "scripts": {},
   "dependencies": {
+    "@npc-cli/media": "workspace:^",
     "@npc-cli/ui-sdk": "workspace:^",
     "@npc-cli/util": "workspace:^",
     "@phosphor-icons/react": "catalog:",
