--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -46,6 +46,7 @@ catalog:
   type-fest: ^5.3.1
   typescript: ~5.9.3
   uuid: ^13.0.0
+  vite-bundle-analyzer: ^1.3.6
   zod: 4.1.13
   zustand: ^5.0.9
 
